2002-08-28 00:34  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/blit.m: Do basic gamma correction when rendering
	text.

2002-08-27 12:10  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/: Fix copyright notices.

2002-08-27 11:58  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ftfont.m: Add experimental subpixel text renderer.

	* Source/art/blit.h, Source/art/blit.m: Add render_blit_subpixel
	function, used in subpixel rendering.

2002-08-27 10:23  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ARTContext.m, Source/art/composite.m,
	Source/art/GNUmakefile: Move compositing code to its own file.
	Reformat.
	(-_composite_func::::::): Handle the plusl_oo case correctly.
	(-compositerect:op:): Handle inline alpha in the general case.

2002-08-26 16:36  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/image.m: Assume that input isn't premultiplied in
	all cases (to match -xlib behavior, for now). Reformat to fit
	coding standards better.

2002-08-26 15:59  Alexander Malmberg  <alexander@malmberg.org>

	* Headers/art/ARTContext.h, Source/art/ARTContext.m,
	Source/art/ARTWindowBuffer.m, Source/art/GNUmakefile,
	Source/art/blit.h, Source/art/ARTGState.h, Source/art/image.m: Move
	image handling (-DPSimage...) to its own file. Add handling of
	arbitrary transformations, arbitrary bits/samples, bits/pixel, etc.,
	planar data, and gray and cmyk colorspaces.

2002-08-26 01:09  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/blit.m: Reformat to fit coding standards better.

2002-08-26 00:33  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ARTContext.m (-DPSimage:::::::::::): Assume input is
	pre-multiplied.

2002-08-25 21:41  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ARTContext.m (-_composite_func::::::): Implement
	special optimized handling of transparent source.

2002-08-25 20:48  Alexander Malmberg  <alexander@malmberg.org>
