@@ -1,3 +1,8 @@
+2002-08-28 13:29  Alexander Malmberg  <alexander@malmberg.org>
+
+	* Source/art/ftfont.m: Make the filters used in subpixel rendering
+	configurable.
+
 2002-08-28 00:34  Alexander Malmberg  <alexander@malmberg.org>
 
 	* Source/art/blit.m: Do basic gamma correction when rendering
